# benchmarks

./: README.md
crud/: .gitignore  bench.ps1  build.ps1
crud/cpp/: .gitignore  CMakeLists.txt
crud/cpp/src/: main.cpp  terje_itoa.hpp
crud/cs/: .gitignore  Program.cs  crud.csproj  crud.sln  packages.config
crud/cs/Properties/: AssemblyInfo.cs
crud/plot/: __main__.py
crud/python/: crud.py  main.py
